--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,33 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/maintarget/
-!**/src/testtarget/
+# Eclipse stuff
+.classpath
+.project
+.settings/
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# netbeans
+nbproject/
+nbactions.xml
+
+# we use maven!
+build.xml
+
+# maven
+target/
+dependency-reduced-pom.xml
+
+# vim
+.*.sw[a-p]
+
+# various other potential build files
+build/
+bin/
+dist/
+manifest.mf
+
+# Mac filesystem dust
+.DS_Store/
+
+# intellij
 *.iml
 *.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/mainbuild/
-!**/src/testbuild/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
+*.iws
+.idea/
